--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
   <h1>Free QR Code Generator</h1>
-  <p class="subtitle">Lifetime QR codes • No expiry •Completely free</p>
+  <p class="subtitle">Lifetime QR codes • No expiry</p>
 
   <div class="card">
 
