--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Free QR Code Generator</title>
+  <title>Stylish QR Code Generator</title>
   <link rel="stylesheet" href="assets/css/style.css"/>
 
   <!-- QR Styling Library -->
@@ -14,8 +14,8 @@
 <div class="bg-gradient"></div>
 
 <div class="container">
-  <h1>Free QR Code Generator</h1>
-  <p class="subtitle">• Lifetime QR codes • No expiry</p>
+  <h1>Stylish QR Code Generator</h1>
+  <p class="subtitle">AI-style glass UI • Lifetime QR codes • No expiry</p>
 
   <div class="card">
 
@@ -36,7 +36,10 @@
     <!-- URL -->
     <div class="section type-section" id="section-url">
       <label>Enter URL:</label>
-      <input id="input-url" type="text" placeholder="https://example.com"/>
+      <div class="input-with-paste">
+        <input id="input-url" type="text" placeholder="https://example.com"/>
+        <button type="button" id="btn-paste" class="paste-btn">Paste</button>
+      </div>
     </div>
 
     <!-- WiFi -->
